workloads/base/hello/istio/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: hello-gw
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - CHANGE_ME_HOST
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: hello-vs
spec:
  hosts:
    - CHANGE_ME_HOST
  gateways:
    - hello-gw
  http:
    - route:
        - destination:
            host: hello
            port:
              number: 80
